# Terminal_To_Do

./: .gitignore  .isort.cfg  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  terminal_to_do_config_defaults.json
src/: main.py
src/utils/: config_utils.py  s3_tools.py  sqlite_tools.py
