[project]
name = "Terminal_To_Do"
version = "0.1.0"
description = "Terminal_To_Do"
requires-python = ">=3.12,<3.14"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.37.30",
    "datetime>=5.5",
    "flake8>=7.1.2",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pygsheets>=2.0.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.43.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[tool.flake8]
max-line-length = 120
max-complexity = 15
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
lines_between_types = 0
lines_between_sections = 1
sort_relative_in_force_sorted_sections = false
known_third_party = ["brand_tools", "budgets", "config", "config_utils", "config_tests", "config_data_quality_validation", "dotenv"]
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["FIRSTPARTY"]
force_sort_within_sections = false

[tool.removed]
known_first_party = ["dotenv"]


[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
